--- a/tr/index.html
+++ b/tr/index.html
@@ -1,1 +1,35 @@
-tr
+<h2 class="code-line" data-line-start=0 data-line-end=2 ><a id="Gizlilik_Politikas_0"></a>Gizlilik Politikası</h2>
+<h3 class="code-line" data-line-start=3 data-line-end=4 ><a id="Giri_3"></a>Giriş</h3>
+<p class="has-line-data" data-line-start="4" data-line-end="8">Gizlilik politikamız, <em>Dengeli</em>'de hangi bilgileri topladığımızı, <em>Balanced</em>'in bu bilgileri nasıl kullandığını ve hangi seçeneklere sahip olduğunuzu anlamanıza yardımcı olacaktır.<br>
+<em>Dengeli</em>, <em>Dengeli</em> uygulamasını ücretsiz bir uygulama olarak oluşturdu. Bu HİZMET <em>Balanced</em> tarafından ücretsiz olarak sağlanmaktadır ve olduğu gibi kullanılması amaçlanmıştır.<br>
+Hizmetimizi kullanmayı seçerseniz, bu politikayla ilgili bilgilerin toplanmasını ve kullanılmasını kabul etmiş olursunuz. Topladığımız Kişisel Bilgiler, Hizmeti sağlamak ve geliştirmek için kullanılır. Bilgilerinizi bu Gizlilik Politikasında açıklananlar dışında kimseyle kullanmayacağız veya paylaşmayacağız.<br>
+Bu Gizlilik Politikasında kullanılan terimler, bu Gizlilik Politikasında aksi belirtilmedikçe, web sitemizden erişilebilen Hüküm ve Koşullarımızdaki anlamlarla aynı anlamlara sahiptir.</p>
+<h3 class="code-line" data-line-start=9 data-line-end=10 ><a id="Bilgi_Toplama_ve_Kullanm_9"></a>Bilgi Toplama ve Kullanım</h3>
+<p class="has-line-data" data-line-start="10" data-line-end="12">Hizmetimizi kullanırken daha iyi bir deneyim için, bize kullanıcı adı, e-posta adresi, cinsiyet, konum, resimler dahil ancak bunlarla sınırlı olmamak üzere belirli kişisel olarak tanımlanabilir bilgileri sağlamanızı isteyebiliriz. Talep ettiğimiz bilgiler tarafımızca tutulacak ve bu gizlilik politikasında açıklandığı şekilde kullanılacaktır.<br>
+Uygulama, sizi tanımlamak için kullanılan bilgileri toplayabilen üçüncü taraf hizmetleri kullanır.</p>
+<h3 class="code-line" data-line-start=13 data-line-end=14 ><a id="erezler_13"></a>Çerezler</h3>
+<p class="has-line-data" data-line-start="14" data-line-end="15">Çerezler, genellikle anonim benzersiz bir tanımlayıcı olarak kullanılan az miktarda veri içeren dosyalardır. Bunlar, ziyaret ettiğiniz web sitesinden tarayıcınıza gönderilir ve cihazlarınızın dahili hafızasında saklanır.</p>
+<p class="has-line-data" data-line-start="16" data-line-end="17">Bu Hizmetler, bu “çerezleri” açıkça kullanmaz. Ancak uygulama, bilgi toplamak ve hizmetlerini geliştirmek için “çerezler” kullanan üçüncü taraf kodu ve kitaplıkları kullanabilir. Bu tanımlama bilgilerini kabul etme veya reddetme seçeneğine sahipsiniz ve cihazınıza bir tanımlama bilgisinin ne zaman gönderildiğini bilirsiniz. Çerezlerimizi reddetmeyi seçerseniz, bu Hizmetin bazı kısımlarını kullanamayabilirsiniz.</p>
+<h3 class="code-line" data-line-start=18 data-line-end=19 ><a id="Konum_bilgisi_18"></a>Konum bilgisi</h3>
+<p class="has-line-data" data-line-start="19" data-line-end="20">Bazı hizmetler, kullanıcıların cep telefonlarından iletilen konum bilgilerini kullanabilir. Bu bilgileri yalnızca belirlenen hizmet için gerekli olan kapsamda kullanırız.</p>
+<h3 class="code-line" data-line-start=21 data-line-end=22 ><a id="Cihaz_bilgisi_21"></a>Cihaz bilgisi</h3>
+<p class="has-line-data" data-line-start="22" data-line-end="23">Bazı durumlarda cihazınızdan bilgi topluyoruz. Bilgiler, daha iyi hizmet sağlanması ve dolandırıcılık eylemlerinin önlenmesi için kullanılacaktır. Ayrıca, bu tür bilgiler, bireysel kullanıcıyı tanımlayacak bilgileri içermeyecektir.</p>
+<h3 class="code-line" data-line-start=24 data-line-end=25 ><a id="Servis_salayclar_24"></a>Servis sağlayıcıları</h3>
+<p class="has-line-data" data-line-start="25" data-line-end="26">Aşağıdaki nedenlerden dolayı üçüncü taraf şirketleri ve bireyleri istihdam edebiliriz:</p>
+<ul>
+<li class="has-line-data" data-line-start="27" data-line-end="28">Hizmetimizi kolaylaştırmak için;</li>
+<li class="has-line-data" data-line-start="28" data-line-end="29">Hizmeti bizim adımıza sağlamak için;</li>
+<li class="has-line-data" data-line-start="29" data-line-end="30">Hizmetle ilgili hizmetleri gerçekleştirmek için; veya</li>
+<li class="has-line-data" data-line-start="30" data-line-end="32">Hizmetimizin nasıl kullanıldığını analiz etmemize yardımcı olmak için.</li>
+</ul>
+<p class="has-line-data" data-line-start="32" data-line-end="33">Bu Hizmetin kullanıcılarını, bu üçüncü tarafların Kişisel Bilgilerinize erişimi olduğu konusunda bilgilendirmek istiyoruz. Sebebi ise kendilerine verilen görevleri bizim adımıza yerine getirmektir. Ancak, bilgileri başka bir amaçla açıklamamak veya kullanmamakla yükümlüdürler.</p>
+<h3 class="code-line" data-line-start=34 data-line-end=35 ><a id="Gvenlik_34"></a>Güvenlik</h3>
+<p class="has-line-data" data-line-start="35" data-line-end="36">Bize Kişisel Bilgilerinizi sağlama konusundaki güveninize değer veriyoruz, bu nedenle ticari olarak kabul edilebilir koruma yöntemlerini kullanmaya çalışıyoruz. Ancak internet üzerinden hiçbir iletim yönteminin veya elektronik depolama yönteminin %100 güvenli ve güvenilir olmadığını ve mutlak güvenliğini garanti edemeyiz.y.</p>
+<h3 class="code-line" data-line-start=37 data-line-end=38 ><a id="ocuklarn_Gizlilii_37"></a>Çocukların Gizliliği</h3>
+<p class="has-line-data" data-line-start="38" data-line-end="39">Bu Hizmetler 13 yaşın altındaki hiç kimseye hitap etmez. 13 yaşın altındaki çocuklardan bilerek kişisel olarak tanımlanabilir bilgiler toplamıyoruz. 13 yaşın altındaki bir çocuğun bize kişisel bilgiler sağladığını keşfetmemiz durumunda, bunu sunucularımızdan derhal sileriz. Ebeveyn veya vasi iseniz ve çocuğunuzun bize kişisel bilgiler verdiğini biliyorsanız, gerekli işlemleri yapabilmemiz için lütfen bizimle iletişime geçin.</p>
+<h3 class="code-line" data-line-start=40 data-line-end=41 ><a id="Bu_Gizlilik_Politikasndaki_Deiiklikler_40"></a>Bu Gizlilik Politikasındaki Değişiklikler</h3>
+<p class="has-line-data" data-line-start="41" data-line-end="42">Gizlilik Politikamızı zaman zaman güncelleyebiliriz. Bu nedenle, herhangi bir değişiklik için bu sayfayı periyodik olarak gözden geçirmeniz önerilir. Bu sayfada yeni Gizlilik Politikasını yayınlayarak herhangi bir değişiklik hakkında sizi bilgilendireceğiz. Bu değişiklikler, bu sayfada yayınlandıktan hemen sonra yürürlüğe girer.</p>
+<h3 class="code-line" data-line-start=43 data-line-end=44 ><a id="Bize_Ulan_43"></a>Bize Ulaşın</h3>
+<p class="has-line-data" data-line-start="44" data-line-end="45">Gizlilik Politikamız hakkında herhangi bir sorunuz veya öneriniz varsa, bizimle iletişime geçmekten çekinmeyin.</p>
+<p class="has-line-data" data-line-start="46" data-line-end="48">İletişim bilgileri:<br>
+Email: <em><a href="mailto:balancedinapp@gmail.com">balancedinapp@gmail.com</a></em></p>
